# maintenance_ops

./: .gitignore  DEMO_SCRIPT.md  README.md  RUNBOOK.md  pyproject.toml  setup.py
maintenance_ops/: __init__.py  api.py  api_endpoints.py  config.py  events.py  maintenance_plan.md  patches.txt  reports.py  routing.py  ui.py  validation.py  workflows.py
maintenance_ops/doctype/city/: city.py
maintenance_ops/doctype/maintenance_program/: maintenance_program.py
maintenance_ops/doctype/maintenance_program_task/: maintenance_program_task.json  maintenance_program_task.py
maintenance_ops/doctype/maintenance_work_order/: maintenance_work_order.json  maintenance_work_order.py
maintenance_ops/doctype/outlet/: outlet.json
maintenance_ops/doctype/work_order_checklist_result/: work_order_checklist_result.py
maintenance_ops/fixtures/: asset_category.json  asset_seed.data  city.json  exception_record.json  maintenance_program.json  maintenance_team_member.json  outlet.json  zonal_office.json
maintenance_ops/maintenance_ops/: bootstrap.py  hooks.py  importers.py  models.py  scheduling.py  services.py  ticket_plan.md
maintenance_ops/maintenance_ops/doctype/asset/: asset.json  asset.py
maintenance_ops/maintenance_ops/doctype/asset_category/: asset_category.json  asset_category.py
maintenance_ops/patches/: create_maintenance_workspace.py  import_seed_fixtures.py
maintenance_ops/report/due_overdue_work_orders/: due_overdue_work_orders.py
maintenance_ops/report/ticket_aging_summary/: ticket_aging_summary.json  ticket_aging_summary.py
scripts/: generate_doctypes.py
(+13 files in other folders)
